updated ui and styling

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
   <body>
     <div id="hud" class="invisible">
       <label id="scene">Scene: <span></span></label>
+      <p id="mem-info">wasm: <span id="mem"></span></p>
       <div id="counters">
-        <label>Wasm: <span id="mem"></span></label>
         <label>FPS: <span id="fps"></span></label>
         <label>Verts: <span id="verts"></span></label>
         <label>Tris: <span id="tris"></span></label>
