--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gizmo Engine</title>
 
-    <link rel="icon" type="image/x-icon" href="ico.png" />
+    <link rel="icon" type="image/x-icon" href="resources/images/ico.png" />
     <link rel="stylesheet" href="styles.css" />
     <script type="text/javascript" src="libs/gl-matrix.js" defer></script>
     <script type="module" src="script.js"></script>
