--- a/web/index.html
+++ b/web/index.html
@@ -16,9 +16,9 @@
 <body>
   <canvas width="320" height="240"></canvas>
   <div id="actions">
-    <button id="forward">FORWARD</button>
+    <button id="forward">previous</button>
     <button id="play">PLAY</button>
-    <button id="back">BACK</button>
+    <button id="back">next</button>
   </div>
 </body>
 
