--- a/web/index.html
+++ b/web/index.html
@@ -78,10 +78,9 @@
         <rect id="stop" x="0" y="0" width="77.203" height="91.299" />
       </svg>
     </button>
-    <button id="next" style="display: none" aria-label="next">
-      <svg width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
-        <path
-          d="M48.281,28.666l-48.281,-28.494l0,91.127l48.281,-28.494l0,28.494l28.922,0l0,-91.299l-28.922,0l0,28.666Z" />
+    <button id="next" aria-label="next">
+      <svg width="100%" height="100%" viewBox="0 0 25 31" fill="var(--color-d)">
+        <path d="M19.544,13.899l0,-13.85l5.303,0l0,30.671l-5.303,0l0,-13.948l-19.544,13.899l0,-30.671l19.544,13.899Z" />
       </svg>
     </button>
   </div>
