--- a/web/index.html
+++ b/web/index.html
@@ -57,6 +57,10 @@
       d="M60.11,31.189l31.189,-0l0,28.921l-31.189,0l0,31.189l-28.921,0l-0,-31.189l-31.189,0l-0,-28.921l31.189,-0l-0,-31.189l28.921,-0l0,31.189Z" />
   </svg>
 
+  <div id="filters">
+    <button id="barrel">BARREL</button>
+    <button id="fisheye">FISHEYE</button>
+  </div>
   <div id="controls" class="invisible">
     <button id="previous" style="display: none" aria-label="previous">
       <svg width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
