--- a/web/index.html
+++ b/web/index.html
@@ -52,41 +52,39 @@
   <div id="console">
     <div id="logs"></div>
   </div>
-  <svg id="cross" width="32" height="32" viewBox="0 0 92 92" fill="white">
-    <path
-      d="M60.11,31.189l31.189,-0l0,28.921l-31.189,0l0,31.189l-28.921,0l-0,-31.189l-31.189,0l-0,-28.921l31.189,-0l-0,-31.189l28.921,-0l0,31.189Z" />
-  </svg>
 
-  <div id="filters">
-    <button id="barrel">BARREL</button>
-    <button id="fisheye">FISHEYE</button>
-  </div>
   <div id="controls" class="invisible">
-    <button id="previous" style="display: none" aria-label="previous">
-      <svg width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
-        <path
-          d="M77.203,0l-48.281,28.494l-0,-28.494l-28.922,0l-0,91.299l28.922,0l-0,-28.666l48.281,28.494l0,-91.127Z" />
-      </svg>
-    </button>
-    <button id="playpause" aria-label="playpause">
-      <svg id="icon-play" width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
-        <path d="M0,0l0,91.127l77.203,-45.563l-77.203,-45.564Z" />
-      </svg>
-      <svg id="icon-pause" width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)" style="display: none">
-        <path d="M28.922,0l-28.922,0l0,91.299l28.922,0l-0,-91.299Zm48.281,0l-28.922,0l0,91.299l28.922,0l0,-91.299Z" />
-      </svg>
-    </button>
-    <button id="stop" style="display: none" aria-label="stop">
-      <svg width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
-        <rect id="stop" x="0" y="0" width="77.203" height="91.299" />
-      </svg>
-    </button>
-    <button id="next" aria-label="next">
-      <svg width="100%" height="100%" viewBox="0 0 25 31" fill="var(--color-d)">
-        <path d="M19.544,13.899l0,-13.85l5.303,0l0,30.671l-5.303,0l0,-13.948l-19.544,13.899l0,-30.671l19.544,13.899Z" />
-      </svg>
-    </button>
+    <div id="filters">
+      <button id="barrel">BARREL</button>
+      <button id="fisheye">FISHEYE</button>
+    </div>
+    <div id="actions">
+      <button id="previous" style="display: none" aria-label="previous">
+        <svg width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
+          <path
+            d="M77.203,0l-48.281,28.494l-0,-28.494l-28.922,0l-0,91.299l28.922,0l-0,-28.666l48.281,28.494l0,-91.127Z" />
+        </svg>
+      </button>
+      <button id="playpause" aria-label="playpause">
+        <svg id="icon-play" width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)">
+          <path d="M0,0l0,91.127l77.203,-45.563l-77.203,-45.564Z" />
+        </svg>
+        <svg id="icon-pause" width="100%" height="100%" viewBox="0 0 78 92" fill="var(--color-d)" style="display: none">
+          <path d="M28.922,0l-28.922,0l0,91.299l28.922,0l-0,-91.299Zm48.281,0l-28.922,0l0,91.299l28.922,0l0,-91.299Z" />
+        </svg>
+      </button>
+      <button id="next" aria-label="next">
+        <svg width="100%" height="100%" viewBox="0 0 25 31" fill="var(--color-d)">
+          <path
+            d="M19.544,13.899l0,-13.85l5.303,0l0,30.671l-5.303,0l0,-13.948l-19.544,13.899l0,-30.671l19.544,13.899Z" />
+        </svg>
+      </button>
+    </div>
+    <div id="freqs"></div>
+    <div id="tracks"></div>
   </div>
+
+
 </body>
 
 </html>
