--- a/web/index.html
+++ b/web/index.html
@@ -80,10 +80,11 @@
         </svg>
       </button>
     </div>
-    <div id="freqs"></div>
+    <div id="freqs">
+      <canvas id="freq-canvas"></canvas>
+    </div>
     <div id="tracks"></div>
   </div>
-
 
 </body>
 
